# WOA-VM

./: .gitignore  README.md  pyproject.toml
StyleFintuning/Data/: dataset_prep.ipynb  dataset_prep_no_reasoning.ipynb  dataset_prep_reasoning.ipynb
StyleFintuning/Data/ax_data/: val.jsonl
StyleFintuning/Eval/: baseline_results.ipynb
StyleFintuning/Training/: config.yaml  memory_test.ipynb  notes.md  zero2_offload.json
app/: generate.py
models/: inspect_model.py  load_model.py  nn_model.py  steering_vectors.ipynb  steering_vectors_exploration.ipynb
scripts/: bootstrap_uv.sh  playground.ipynb
