[project]
name = "ml-ephemeral"
version = "0.1.0"
description = "Ephemeral GPU VM inference (transformers-only)"
requires-python = ">=3.10"

# NOTE: torch is installed by the bootstrap script with the right CUDA wheel.
dependencies = [
  "transformers==4.44.2",
  "accelerate==0.33.0",
  "sentencepiece==0.2.0",
  "huggingface-hub==0.24.6",
  "hf-transfer==0.1.6",
  "requests>=2.32,<3",
  "nnsight"
]